Fixed css errors, added bootstrap

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang=en>
     <head>
         <title>Marionette Contact Manager</title>
-        <link href="./assets/css/bottstrap.css" rel="stylesheet">
+        <link href="./assets/css/bootstrap.css" rel="stylesheet">
+        <link href="./assets/css/application.css" rel="stylesheet">
     </head>
 
     <body>
