--- a/index.html
+++ b/index.html
@@ -10,21 +10,63 @@
         <div class="navbar navbar-inverse navbar-fixed-top">
             <div class="navbar-inner">
                 <div class="container">
-                    <span class="bran">Contact Manager</span>
+                    <span class="brand">Contact Manager</span>
                 </div>
             </div>
         </div>
 
-        <div class="container">
-            <p> Here is the static content in the web page.  It will get replaced by our app once we start it. </p>
+        <div id="app-container">
+            <div id="main-region" class="container">
+                <p> Here is the static content in the web page.  It will get replaced by our app once we start it. </p>
+            </div>
         </div>
+
+        <script type="text/template" id="contact-template">
+            <p><%- firstName %> <%- lastName %></p>
+        </script>
+
 
         <script src="./assets/js/vendor/jquery.js"></script>
         <script src="./assets/js/vendor/json2.js"></script>
         <script src="./assets/js/vendor/underscore.js"></script>
         <script src="./assets/js/vendor/backbone.js"></script>
         <script src="./assets/js/vendor/backbone.marionette.js"></script>
+
+        <script type="text/javascript">
+            var ContactManager = new Marionette.Application();
+
+            ContactManager.Contact = Backbone.Model.extend({});
+
+            ContactManager.ContactView = Marionette.ItemView.extend({
+                template: "#contact-template"
+             });
+
+            ContactManager.on("before:start", function(){
+                var RegionContainer = Marionette.LayoutView.extend({
+                    el: "#app-container",
+                    regions: {
+                        main: "#main-region"
+                    }
+                });
+
+                ContactManager.regions = new RegionContainer();
+            });
+
+            ContactManager.on("start", function(){
+                var hamilton = new ContactManager.Contact({
+                    firstName: "Alexander",
+                    lastName: "Hamilton",
+                    phoneNumber: "212-317-1776"
+                });
+
+                var hamiltonView = new ContactManager.ContactView({
+                    model: hamilton 
+                });
+
+                ContactManager.regions.main.show(hamiltonView);
+            });
+
+            ContactManager.start();
+        </script>
     </body>
 </html>
-
-
