--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             </div>
         </div>
 
-        <script type="text/template" id="contact-template">
-            <p><%- firstName %> <%- lastName %></p>
+        <script type="text/template" id="contact-list-item">
+            <%- firstName %> <%- lastName %>
         </script>
 
 
@@ -35,12 +35,39 @@
         <script type="text/javascript">
             var ContactManager = new Marionette.Application();
 
-            ContactManager.Contact = Backbone.Model.extend({});
+            // Model and collection
+            ContactManager.Contact = Backbone.Model.extend({
+                defaults: {
+                    firstName: "",
+                    phoneNumber: "No phone number!"
+                }
+            });
 
-            ContactManager.ContactView = Marionette.ItemView.extend({
-                template: "#contact-template"
-             });
+            ContactManager.ContactsCollection = Backbone.Collection.extend({
+                model: ContactManager.Contact
+            });
 
+            // Views
+            ContactManager.ContactItemView = Marionette.ItemView.extend({
+                tagName: "li",
+                template: "#contact-list-item",
+
+                events: {
+                    "click p": "alertPhoneNumber"
+                },
+
+                alertPhoneNumber: function() {
+                    alert(this.model.escape("phoneNumber"));
+                }
+            });
+
+            ContactManager.ContactsView = Marionette.CollectionView.extend({
+                tagName: "ul",
+                childView: ContactManager.ContactItemView
+            });
+
+
+            // Start doing stuff
             ContactManager.on("before:start", function(){
                 var RegionContainer = Marionette.LayoutView.extend({
                     el: "#app-container",
@@ -53,17 +80,29 @@
             });
 
             ContactManager.on("start", function(){
-                var hamilton = new ContactManager.Contact({
-                    firstName: "Alexander",
-                    lastName: "Hamilton",
-                    phoneNumber: "212-317-1776"
-                });
+                var contacts = new ContactManager.ContactsCollection([
+                    {
+                        firstName: "Alexander",
+                        lastName: "Hamilton",
+                        phoneNumber: "212-317-1776"
+                    },
+                    {
+                        firstName: "Aaron",
+                        lastName: "Burr",
+                        phoneNumber: "212-317-2016"
+                    },
+                    {
+                        firstName: "Thomas",
+                        lastName: "Jefferson",
+                        phoneNumber: "202-317-1776"
+                    }
+                ]);
 
-                var hamiltonView = new ContactManager.ContactView({
-                    model: hamilton 
-                });
+                var contactsListView = new ContactManager.ContactsView({
+                    collection: contacts
+                })
 
-                ContactManager.regions.main.show(hamiltonView);
+                ContactManager.regions.main.show(contactsListView);
             });
 
             ContactManager.start();
